# JPEG

./: CMakeLists.txt  README.md
0.1 SOI/: CMakeLists.txt
1. Quantization Tables/: CMakeLists.txt  dqt.cpp  dqt.h
2. Huffman Tables/: huffman.cpp  huffman.h
3. Baseline DCT/: CMakeLists.txt  baseline_dct.cpp
APPN/: CMakeLists.txt  appn.cpp  appn.h
Baseline DCT/: baseline_dct.h
Huffman Tables/: CMakeLists.txt  HuffmanTableImpl.cpp  HuffmanTableImpl.h  README.md  huffman.cpp
Quantization Tables/: CMakeLists.txt  README.md
SOI/: Makefile  README.md  base.cpp  soi.cpp  soi.h
include/: jpeg.h
src/: jpeg.cpp  jpeg_reader.cpp
